--- a/index.html
+++ b/index.html
@@ -304,15 +304,42 @@
           </p>
         </div>
 
-        <div>
-          <p id="textpagebreak">
-          </p>
-        </div>
-
       </section>
     </div>
 
+    <div class="one">
+      <section class="oneCol">
+        <aside>
+          <div class="footnote">
+            <br><br>
+            <br><br>
+            <br><br>
+            I<br><br>
+            I<br><br>
+            I<br><br>
+            II<br><br>
+            II<br><br>
+            II<br><br>
+            III<br><br>
+            III<br><br>
+            III<br><br>
+            IV<br><br>
+            IV<br><br>
+            IV<br><br>
+            V<br><br>
+            V<br><br>
+            V<br><br>
+            VI<br><br>
+            VI<br><br>
+            VI<br><br>
+            VII<br><br>
+            VII<br><br>
+            VII<br><br>
+          </div>
+        </aside>
 
+      </section>
+    </div>
 
     <div class="two">
       <section class="oneCol">
@@ -3381,7 +3408,7 @@
 
       DESIGN<br>
       <b>Lucrezia Russo</b><br>
-      .This publication has been designed in HTML/CSS-to-Print with Paged.js (original Paged.js template by Julie
+      <span style ="background-color: yellow;">.This publication has been designed in HTML/CSS-to-Print with Paged.js</span> (original Paged.js template by Julie
       Blanc).<br><br>
 
       FONT<br>
