--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="oneCol">
 
         <h4><span style="font-size: 28pt;">From Processing to Design</span><br><br>
-          Open Source Culture and the Redefinition of Contemporary Graphic Design Practice</h4>
+          Free Open Source Culture and the Redefinition of Contemporary Graphic Design Practice</h4>
 
         <br><br>
         <span style="font-size: 12pt;">A Master’s Thesis by<br>
